5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1670_1391.log
== TEST (2019-04-16 18:20:35) 
-- CODE:
print(input(digite_o_valor_de_kwh: ))
if
	x=>150= 0,60 + 5,0

-- ERROR:
File "XXXX", line 1
    print(input(digite_o_valor_de_kwh: ))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:23:37) 
-- CODE:
print(input(digite_o_valor_de_kwh: ))
if
	x=>150 =  (x*0,60) + 5,0
sale	
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 1
    print(input(digite_o_valor_de_kwh: ))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:07) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if
	x=>150 =  (x*0,60) + 5,0	
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:23) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if
	x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:25) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if
	x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:33) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:35) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:35) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:36) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:46) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if x=>150 =  (x*0,60) + 5,0	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if x=>150 =  (x*0,60) + 5,0	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:54) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if x=>150 =  (x*0,60) + 5,0:	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if x=>150 =  (x*0,60) + 5,0:	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:56) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if x=>150 =  (x*0,60) + 5,0:	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if x=>150 =  (x*0,60) + 5,0:	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:05) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if 
	x=>150 =  (x*0,60) + 5,0:	
else
	x<150 = (x*0,75) + 16

-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:15) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if 
	x=>150 =  (x*0,60) + 5,0:	
else
	x<150 = (x*0,75) + 16:

-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:26) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if 
	x=>150 =  (x*0,60) + 5,0;	
else
	x<150 = (x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:27) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if 
	x=>150 =  (x*0,60) + 5,0;	
else
	x<150 = (x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:59) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if;
	x=>150 =  (x*0,60) + 5,0;	
else
	x<150 = (x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if;
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:00) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if;
	x=>150 =  (x*0,60) + 5,0;	
else
	x<150 = (x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if;
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:26:05) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=>150 =  (x*0,60) + 5,0;	
else
	x<150 = (x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:28) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if: x=<150   
	(x*0,60) + 5,0;	
else x>150 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if: x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:30) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if: x=<150   
	(x*0,60) + 5,0;	
else x>150 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if: x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:50) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if: x=<150   
	(x*0,60) + 5,0;	
else: 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if: x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:52) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if: x=<150   
	(x*0,60) + 5,0;	
else: 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if: x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:57) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:x=<150   
	(x*0,60) + 5,0;	
else: 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if:x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:00) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=<150   
	(x*0,60) + 5,0;	
else: 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:41:18) 
-- CODE:
print(input("digite_o_valor_de_kwh: "))
if:
	x=<150   
	(x*0,60) + 5,0;	
else: 
	(x*0,75) + 16;

-- ERROR:
File "XXXX", line 2
    if:
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:15) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if: x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if: x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:17) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if: x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if: x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:25) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if, x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if, x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:26) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if, x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if, x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:38) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:39) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:47:40) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- EXECUTION TIME:
0.194677
-- ERROR:
  File "/home/codebench/codes/1670/1391/main.py", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:47:41) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- EXECUTION TIME:
0.208332
-- ERROR:
  File "/home/codebench/codes/1670/1391/main.py", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:47:43) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:47:44) 
-- CODE:
x=input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- EXECUTION TIME:
0.205155
-- ERROR:
  File "/home/codebench/codes/1670/1391/main.py", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:09) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:10) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:52) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:48:53) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else: 
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:10) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")

	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 3
    a=(x*0,75) + 16;
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:14) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")

a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 3
    a=(x*0,75) + 16;
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:18) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")

a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 3
    a=(x*0,75) + 16;
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:22) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")

a=(x*0,75) + 16
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 3
    a=(x*0,75) + 16
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:23) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")

a=(x*0,75) + 16
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 3
    a=(x*0,75) + 16
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:27) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")

a=(x*0,75) + 16
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 3
    a=(x*0,75) + 16
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:45) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else;
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:45) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else;
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:50:46) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if; x=<150   
	a=(x*0,60) + 5,0;	
else;
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if; x=<150   
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:31) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if	x=<150   
	a=(x*0,60) + 5,0;	
else;
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if	x=<150   
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:51:33) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if	x=<150   
	a=(x*0,60) + 5,0;	
else;
	a=(x*0,75) + 16;
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if	x=<150   
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:19) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
if	x=<150   
	a=(x*0,60) + 5,0	
else
	a=(x*0,75) + 16
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    if	x=<150   
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:32) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
x=<150 if   
	a=(x*0,60) + 5,0	
else
	a=(x*0,75) + 16
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    x=<150 if   
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:52:33) 
-- CODE:
x=float(input("digite_o_valor_de_kwh: ")
x=<150 if   
	a=(x*0,60) + 5,0	
else
	a=(x*0,75) + 16
print(round(a, 2 ))
-- ERROR:
File "XXXX", line 2
    x=<150 if   
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
